# react-native-liquid-glass-bottom-tabs

./: CONTRIBUTING.md  DummyViewController.swift  LICENSE  LiquidGlassBottomTabs.podspec  LiquidTabBarController.swift  README.md  package.json  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt
cpp/: LiquidGlassBottomTabsImpl.cpp  LiquidGlassBottomTabsImpl.h
example/: app.json  metro.config.js  package.json  vite.config.mjs
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/liquidglassbottomtabs/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile  SceneDelegate.swift
example/ios/LiquidGlassBottomTabsExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/LiquidGlassBottomTabsExample.xcodeproj/: project.pbxproj
example/ios/LiquidGlassBottomTabsExample.xcodeproj/xcshareddata/xcschemes/: LiquidGlassBottomTabsExample.xcscheme
example/ios/LiquidGlassBottomTabsExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: LiquidTabBarManager.mm  LiquidTabBarManager.swift  LiquidTabBarView.swift  LiquidTabBarViewManager.swift  LiquidTabBarViewWrapper.swift  OnLoad.mm
src/: NativeLiquidGlassBottomTabs.ts  index.tsx  multiply.native.tsx
